--- a/style.css
+++ b/style.css
@@ -12,4 +12,8 @@ body {
   color: aquamarine;
   background: #222;
   font-family: monospace;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 6rem;
 }
